--- a/src/main/resources/com/example/insyspringjavafxlearning/hello-view.fxml
+++ b/src/main/resources/com/example/insyspringjavafxlearning/hello-view.fxml
@@ -5,11 +5,12 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
 
-<FlowPane fx:controller="com.example.insyspringjavafxlearning.HelloController"
-          xmlns:fx="http://javafx.com/fxml" orientation="VERTICAL">
+<VBox fx:controller="com.example.insyspringjavafxlearning.HelloController"
+          xmlns:fx="http://javafx.com/fxml">
     <Button text="Button One"/>
     <Button text="Button Two"/>
     <Button text="Button Three"/>
@@ -20,4 +21,4 @@
     <Button text="Button Eight"/>
     <Button text="Button Nine"/>
     <Button text="Button Ten"/>
-</FlowPane>
+</VBox>
